@@ -586,3 +586,13 @@ func (s *Ethereum) Stop() error {
 func (s *Ethereum) LastAcceptedBlock() *types.Block {
 	return s.blockchain.LastAcceptedBlock()
 }
+
+// SetGasPrice sets the minimum gas price to [newGasPrice]
+// sets the price on [s], [txPool], and the gas price oracle
+func (s *Ethereum) SetGasPrice(newGasPrice *big.Int) {
+	s.lock.Lock()
+	s.gasPrice = newGasPrice
+	s.lock.Unlock()
+	s.txPool.SetGasPrice(newGasPrice)
+	s.APIBackend.gpo.SetGasPrice(newGasPrice)
+}
